<resources>
    <string name="app_name">payments-app</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Easy Pay</string>
    <string name="button_sign_in">Sign In</string>
    <string name="edit_text_login_hint">Login</string>
    <string name="edit_text_password_hint">Password</string>
    <string name="error_wrong_login_or_password">Wrong login or password</string>
    <string name="title_payment">Title:</string>
    <string name="payment_amount">Amount:</string>
    <string name="payment_created">Created:</string>
    <string name="botton_sign_out">Sign out</string>
    <string name="text_error_connection_error">Check your internet connection</string>
    <string name="text_error_error_unknown">Unknown error.Contact customer support</string>
</resources>