<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/_8dp"
    app:cardCornerRadius="@dimen/_8dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_8dp">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.4" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/titleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_payment"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/titleValueTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/amountTextView"
            android:layout_marginTop="@dimen/_8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payment_amount"
            app:layout_constraintTop_toBottomOf="@id/titleValueTextView"
            app:layout_constraintStart_toStartOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/amountValueTextView"
            android:layout_marginTop="@dimen/_8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/titleValueTextView"
            app:layout_constraintStart_toEndOf="@id/guideline"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/createdTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8dp"
            android:text="@string/payment_created"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/amountValueTextView" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/createdValueTextView"
            android:layout_marginTop="@dimen/_8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/amountValueTextView"
            app:layout_constraintStart_toEndOf="@id/guideline"/>




    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>